--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,13 @@ header {
 
 header img {
   width: 100%;
-  max-width: 320px;
+  max-width: 280px;
+}
+
+@media (max-width: 400px) {
+  header img {
+    max-width: 200px;
+  }
 }
 
 main {
