--- a/css/main.scss
+++ b/css/main.scss
@@ -52,7 +52,15 @@ header {
   padding: 4rem 1rem 1rem;
   img {
     width: 100%;
-    max-width: 320px;
+    max-width: 280px;
+  }
+}
+
+@media (max-width: 400px) {
+  header {
+    img {
+      max-width: 200px;
+    }
   }
 }
 
