--- a/css/main.scss
+++ b/css/main.scss
@@ -56,14 +56,6 @@ header {
   }
 }
 
-@media (max-width: 400px) {
-  header {
-    img {
-      max-width: 200px;
-    }
-  }
-}
-
 main {
   padding: 1rem 1rem 6rem;
   .title {
@@ -132,4 +124,16 @@ main {
 
 footer {
   padding: 1rem;
+}
+
+@media (max-width: 400px) {
+  header {
+    padding: 2rem 1rem 1rem;
+    img {
+      max-width: 200px;
+    }
+  }
+  main {
+    padding: 1rem 1rem 3.5rem;
+  }
 }
